# vrproj

./: .gitmodules  CMakeLists.txt  README.md  package.cmake
shared/: Matrices.cpp  Matrices.h  Vectors.h  pathtools.h
src/: CMakeLists.txt  CreateShaderFiles.cmake  DrawText.cc  DrawText.h  GlUtils.cc  GlUtils.h  ObjectBuffer.cc  ObjectBuffer.h  main.cpp  test.cc
src/GeomLib/: CMakeLists.txt  Polygon.cpp  Polygon.h  Polytope.cpp  Polytope.h  Shapes.h
src/Resources/: Font.vs  companionwindow.fs  companionwindow.vs  controller.fs  controller.vs  floor.fs  rendermodel.fs  rendermodel.vs  scene.4d.vs  scene.fs  scene.vs
